# pytorch-geometric

./: LICENSE  README.md  main.py  pyproject.toml
src/pytorch_geometric/: __init__.py
src/pytorch_geometric.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
