[project]
name = "pytorch-geometric"
version = "0.0.1"
authors = [
  { name="JacovkaMana", email="JacovkaMana@outlook.com" },
]
description = "A dummy package for users who let LLM hallucinate package names and install them"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/JacovkaMana/pytorch-geometric"
Issues = "https://github.com/JacovkaMana/pytorch-geometric/issues"